updated controller and added views

--- a/Views/MemberTasks/Index.cshtml
+++ b/Views/MemberTasks/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MemberTask>
+﻿@model IEnumerable<task_management_system.Models.DBModels.MemberTaskModel>
 
 @{
     ViewData["Title"] = "Index";
