--- a/Views/MemberTasks/Create.cshtml
+++ b/Views/MemberTasks/Create.cshtml
@@ -30,7 +30,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="AssignedUserId" class="control-label"></label>
-                <select asp-for="AssignedUserId" class ="form-control" asp-items="ViewBag.AssignedUserId"></select>
+                <select asp-for="AssignedUserId" class ="form-control" asp-items="ViewBag.AssignedUserId">
+                    <option value = ''>Select a user!</option>
+                </select>
             </div>
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
