create and assign roles

--- a/Views/MemberTasks/Index.cshtml
+++ b/Views/MemberTasks/Index.cshtml
@@ -7,9 +7,12 @@
 
 <h1>My tasks</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+@if (User.IsInRole("TeamLeader"))
+{
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
+}
 <table class="table">
     <thead>
         <tr>
