--- a/Views/MemberTasks/Create.cshtml
+++ b/Views/MemberTasks/Create.cshtml
@@ -36,7 +36,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
-                <input asp-for="Status" class="form-control" />
+                <select asp-for="Status" class="form-control">
+                    <option value = 'New'>New</option>
+                </select>
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
             <div class="form-group">
