--- a/Views/MemberTasks/Details.cshtml
+++ b/Views/MemberTasks/Details.cshtml
@@ -33,7 +33,7 @@
             @Html.DisplayNameFor(model => model.AssignedUser)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AssignedUser.Id)
+            @Html.DisplayFor(model => model.AssignedUser.UserName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Status)
