--- a/Views/MemberTasks/Edit.cshtml
+++ b/Views/MemberTasks/Edit.cshtml
@@ -36,7 +36,13 @@
             </div>
             <div class="form-group">
                 <label asp-for="Status" class="control-label"></label>
-                <input asp-for="Status" class="form-control" />
+                <select asp-for="Status" class="form-control">
+                    <option value = 'New'>New</option>
+                    <option value = 'In work'>In work</option>
+                    <option value = 'In Review'>In Review</option>
+                    <option value = 'Finished'>Finished</option>
+                    <option value = 'Canceled'>Canceled</option>
+                </select>
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
             <div class="form-group">
